test/sema/typeck/impl/type-param-unknown-bound.out
error: unknown identifier `Unknown`.
--> type-param-unknown-bound.dora:3:9
 | struct Foo[T](T)
 | 
 | impl[T: Unknown] Foo[T] {
           ~~~~~~~
 |     fn f() {}
 |     fn g() {}
1 error found.
