test/sema/typeck/impl/type-param-unknown-bound.dora
struct Foo[T](T)

impl[T: Unknown] Foo[T] {
    fn f() {}
    fn g() {}
}
